--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2618,7 +2618,7 @@ input, textarea, select {
 .pageheader {
   padding-block: 138px;
   margin-top: 0px;
-  background-image: url(../../assets/images/banner/bg/alguaciles_1.jpeg);
+  background-image: url(../../assets/images/banner/bg/sabraplas.png);
 }
 @media (min-width: 1200px) {
   .pageheader {
