--- a/assets/sass/sub-stylesheet/_variables.scss
+++ b/assets/sass/sub-stylesheet/_variables.scss
@@ -9,7 +9,7 @@ $bootstrap-sass-asset-helper: false !default;
 $title-color: #021738;
 $desc-color: #555555;
 $theme-color: #8a4be4;
-$theme-color2: #00c851;
+$theme-color2: #8a4be4;
 $primary-color:#021738;
 $border-color: #ecf0f3;
 $white-color: #fff;
